Added documentation to makeSmoothWithDependencies

--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "adjusted-parallel",
+   "execution_count": 19,
+   "id": "fiscal-norfolk",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "printn (generic function with 1 method)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "id": "recognized-pension",
+   "execution_count": 20,
+   "id": "announced-microphone",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
     "end\n",
     "\n",
     "\"\"\"\n",
-    "    rowMinors(::AbstractMatrix{<:Number},)\n",
+    "    rowMinors(::AbstractMatrix{<:Number},::Union{AbstractSet,AbstractVector})\n",
     "\n",
     "    Identical to slicematrix, except only returns row vectors indexed by a set S.\n",
     "\n",
@@ -79,7 +79,7 @@
     " 7  8  9\n",
     "\"\"\"\n",
     "\n",
-    "function rowMinors(A::AbstractMatrix{<:Number},S)\n",
+    "function rowMinors(A::AbstractMatrix{<:Number},S::Union{AbstractSet,AbstractVector})\n",
     "    outList=[]\n",
     "    slices=slicematrix(A)\n",
     "    for i in 1:size(slices,1)\n",
@@ -125,7 +125,7 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "    findBarycenter(::AbstractSet,::Polymake.BigObjectAllocated)\n",
+    "    findBarycenter(::Union{AbstractSet,AbstractVector},::Polymake.BigObjectAllocated)\n",
     "\n",
     "    Takes a normal toric variety X and a set s corresponding to a subset of rays of X, and outputs a polymake vector\n",
     "    corresponding to the barycenter of those rays.\n",
@@ -142,7 +142,7 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "function findBarycenter(s,X::Polymake.BigObjectAllocated)\n",
+    "function findBarycenter(s::Union{AbstractSet,AbstractVector},X::Polymake.BigObjectAllocated)\n",
     "    rays = rowMinors(Array(X.RAYS), s)\n",
     "    dim=size(rays,2)\n",
     "    bary=zeros(Polymake.Rational,dim,1)\n",
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cooked-superintendent",
+   "id": "rolled-baltimore",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,15 +240,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "upper-dinner",
+   "id": "essential-magnitude",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "historical-miller",
+   "execution_count": 21,
+   "id": "distant-bryan",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "makeSimplicial (generic function with 1 method)"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,9 +303,20 @@
     "    return size(X.RAYS, 2)\n",
     "end\n",
     "\n",
+    "\"\"\"\n",
+    "    getConeFaces(::Polymake.BigObjectAllocated,::AbstractVector,::AbstractMatrix)\n",
     "\n",
+    "    Takes a fan, its ray matrix, and a vector corresponding to one of its cones, and returns a list of maximal strict faces of that cone.\n",
     "\n",
-    "function getConeFacesImproved(fan,cone,rayMatrix)\n",
+    "#Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0; 1 1 0; 1 0 1; 1 1 1],INPUT_CONES=[[0,1,2,3]])\n",
+    "\n",
+    "julia> getConeFaces(X,[1,2,3,4],Array(X.RAYS))\n",
+    "[[ 1 ,  2 ], [ 1 ,  3 ], [ 3 ,  4 ], [ 2 ,  4 ]]\n",
+    "\"\"\"\n",
+    "\n",
+    "function getConeFaces(fan::Polymake.BigObjectAllocated,cone::AbstractVector,rayMatrix::AbstractMatrix)\n",
     "    lattice = fan.HASSE_DIAGRAM\n",
     "    faces = @Polymake.convert_to Array{Set{Int}} lattice.FACES\n",
     "    cone_faces=[]\n",
@@ -345,7 +356,7 @@
     "            # and subdivide at that ray, using toricBlowup\n",
     "            \n",
     "            # Get faces (need to replace this)\n",
-    "            edges = getConeFacesImproved(Y,badCone,rayMatrix)\n",
+    "            edges = getConeFaces(Y,badCone,rayMatrix)\n",
     "            # Find the first ray that is contained in more than one orbit\n",
     "            i = 1\n",
     "            while count(r->(badCone[i] in r), edges) == 1\n",
@@ -365,8 +376,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "according-reset",
+   "execution_count": null,
+   "id": "compressed-terminal",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "double-humanitarian",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "innocent-morrison",
    "metadata": {},
    "outputs": [
     {
@@ -375,27 +402,12 @@
        "makeSmooth (generic function with 1 method)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function coneListFormat(coneList)\n",
-    "    memberList=[]\n",
-    "    denseList=slicematrix(coneList)\n",
-    "    for row in denseList\n",
-    "        members=[]\n",
-    "        for i in 1:size(row,1)\n",
-    "            if row[i]==1\n",
-    "                append!(members,i)\n",
-    "            end\n",
-    "        end\n",
-    "        append!(memberList,[members])\n",
-    "    end\n",
-    "    return memberList\n",
-    "end\n",
-    " \n",
     "function makeSmooth(X)\n",
     "    Y  = copy(X)\n",
     "    while(true)\n",
@@ -467,8 +479,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "piano-project",
+   "execution_count": null,
+   "id": "expressed-mining",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "funded-revision",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +517,7 @@
        "\t1 -2 0\n"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,8 +528,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "artistic-christian",
+   "execution_count": 24,
+   "id": "younger-beijing",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +541,7 @@
        "true"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specialized-innocent",
+   "id": "abstract-ukraine",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -541,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "swiss-socket",
+   "id": "dramatic-country",
    "metadata": {},
    "outputs": [],
    "source": []
