New BerghA file, additions to stackyFan

--- a/BerghAHelpersDraft.ipynb
+++ b/BerghAHelpersDraft.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ea88bf0",
+   "id": "domestic-spectacular",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f62d0358",
+   "id": "understanding-structure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "b4a41196",
+   "id": "secure-borough",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "9a589633",
+   "id": "charming-making",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "514cac66",
+   "id": "noted-puppy",
    "metadata": {},
    "outputs": [
     {
@@ -115,12 +115,12 @@
     }
    ],
    "source": [
-    "function maximalCones(coneList, rayMatrix, distinguished)\n",
-    "    # Finds the maximal cones according to # distinguished rays and multiplicity\n",
+    "function extremalCones(coneList, rayMatrix, distinguished)\n",
+    "    # Finds the extremal cones according to # distinguished rays and multiplicity\n",
     "    # distinguished is a boolean vector whose size is equal to the number of rays\n",
     "    # The i-th index is 1 if the i-th ray (in rayMatrix) is distinguished\n",
     "    maxCones = [coneList[1,:]]\n",
-    "    for i in 2:size(coneList,1)\n",
+    "    for i in 1:size(coneList,1)\n",
     "        cone = coneList[i,:]\n",
     "        # Compare the cone with the first element of the maximal cone list\n",
     "        comp = compareCones(cone, maxCones[1], rayMatrix, distinguished)\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "b312b201",
+   "id": "christian-vehicle",
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1b1b79c2",
+   "id": "systematic-expert",
    "metadata": {
     "scrolled": true
    },
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "45cd443d",
+   "id": "acoustic-behalf",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "fab3c6c3",
+   "id": "equal-understanding",
    "metadata": {},
    "outputs": [
     {
@@ -265,9 +265,12 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "df493583",
+   "id": "challenging-geometry",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -310,9 +313,12 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "8ac14c3a",
+   "id": "modified-order",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -337,9 +343,12 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "32db64d6",
+   "id": "mobile-disabled",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -364,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "4e975492",
+   "id": "unable-questionnaire",
    "metadata": {
     "scrolled": true
    },
@@ -394,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f17be5",
+   "id": "patient-atmosphere",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -402,15 +411,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.5.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.5.3"
   }
  },
  "nbformat": 4,
