Add documentation to blowup

--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -153,12 +153,22 @@
     "    return bary\n",
     "end\n",
     "\n",
+    "\"\"\"\n",
+    "\n",
+    "    toric_blowup(::Union{AbstractSet,AbstractVector},::Polymake.BigObjectAllocated,::AbstractVector)\n",
+    "\n",
+    "    Takes a normal toric variety X, a set s corresponding to a subset of rays of X, and a (optional) polymake vector,\n",
+    "    v, blow up X at v. If v is not provided, blow up X at the barycenter of s.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "function toric_blowup(s, X, v)\n",
     "    s = [i + 1 for i in s]\n",
     "    if v==nothing\n",
     "        v=findBarycenter(s,X)\n",
     "    end\n",
     "    coneList = convertIncidenceMatrix(X.MAXIMAL_CONES)\n",
+    "    # Extracting the indices of all the cones in X that contains the set of rays s\n",
     "    starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
     "    star = [coneList[i] for i in starIndex]\n",
     "    rayMatrix = X.RAYS\n",
@@ -166,11 +176,16 @@
     "    lattice = X.HASSE_DIAGRAM\n",
     "    faces = @Polymake.convert_to Array{Set{Int}} lattice.FACES\n",
     "    \n",
+    "    # Get all the subcones of X that is contained in one of the cones in star and has the same rank\n",
     "    clStar = []\n",
+    "    # Iterate over star\n",
     "    for t in star\n",
+    "        # Get the rank of t\n",
     "        c = rank(Array(rowMinors(rayMatrix, t))) - 1\n",
+    "        # Get all the subcones of X with rank c\n",
     "        rank_c_subcone_indices = @Polymake.convert_to Array{Int} Polymake.graph.nodes_of_rank(lattice,c)\n",
     "        rank_c_subcones = [faces[i + 1] for i in rank_c_subcone_indices]\n",
+    "        # Iterate over rank_c_subcones, and put the cones that is contained in t into clStar\n",
     "        for cone in rank_c_subcones\n",
     "            new_cone = [i+1 for i in cone]\n",
     "            if all((i -> i in t).(new_cone))\n",
@@ -181,24 +196,30 @@
     "    clStar = unique(clStar)\n",
     "    \n",
     "    n = size(rayMatrix, 1) + 1\n",
+    "    # Filter out the cones in star from conelist\n",
     "    coneList = filter(x -> !(x in star), coneList)\n",
     "    \n",
     "    if length(s) == 1\n",
+    "        # If s consists of a single ray, find all the cones in clStar that does not contain s\n",
     "        newCones = []\n",
     "        for t in clStar\n",
     "            if !(s[1] in t)\n",
     "                push!(newCones, sort(push!(t, s[1])))\n",
     "            end\n",
     "        end\n",
+    "        # return newCones plus coneList\n",
     "        finalCones = [[i - 1 for i in cone] for cone in append!(coneList, newCones)]\n",
     "        return Polymake.fulton.NormalToricVariety(INPUT_RAYS = Array(X.RAYS), INPUT_CONES = append!(coneList, newCones))\n",
     "    end\n",
     "    newCones = []\n",
     "    for t in clStar\n",
+    "        # Find all the cones in clStar that does not contain at least one ray in s\n",
+    "        # QUESTION: Why seperate this from the one element case? Any won't work with one element list?\n",
     "        if any(((i) -> !(i in t)).(s))\n",
     "            push!(newCones, push!(t, n))\n",
     "        end\n",
     "    end\n",
+    "    # return newCones plus coneList\n",
     "    finalRays = vcat((X.RAYS),v)\n",
     "    finalCones = [[i - 1 for i in cone] for cone in append!(coneList, newCones)]\n",
     "    return Polymake.fulton.NormalToricVariety(INPUT_RAYS = finalRays, INPUT_CONES = finalCones)\n",
@@ -569,15 +590,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
