--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "turkish-campbell",
+   "execution_count": 9,
+   "id": "3eacb0c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "extremalCones (generic function with 1 method)"
+       "interiorPoints (generic function with 1 method)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"stackyFan.jl\")"
+    "include(\"StackyFan.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "copyrighted-payday",
+   "execution_count": 10,
+   "id": "36cc6682",
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +33,14 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#inputs are a stacky fan and a vector of booleans representing the distinguished structure.\n",
-    "function BerghA(X::stackyFan,D::Array{Int64,1})\n",
+    "function BerghA(X::StackyFan,D::Array{Int64,1})\n",
     "    rayMatrix=Array(X.fan.RAYS)\n",
     "    coneList=convertIncidenceMatrix(X.fan.MAXIMAL_CONES)\n",
     "    dim=size(rayMatrix,2)\n",
@@ -71,38 +71,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "awful-society",
+   "execution_count": 11,
+   "id": "53f36af4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "stackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001ad86910), Dict(\"1,2\" => 1,\"1,-1\" => 1,\"1,0\" => 1))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00007ffc7d4357d0), [1, 1, 1], Dict(\"1,2\" => 1, \"1,-1\" => 1, \"1,0\" => 1))"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F=makeStackyFan([1 0; 1 2; 1 -1],[[0,1],[0,2]],[1,1,1])"
+    "F=StackyFan([1 0; 1 2; 1 -1],[[0,1],[0,2]],[1,1,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "western-actress",
+   "execution_count": 12,
+   "id": "121a3787",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "stackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001ad86910), Dict(\"1,2\" => 1,\"1,-1\" => 1,\"1,0\" => 1))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00007ffc7d4357d0), [1, 1, 1], Dict(\"1,2\" => 1, \"1,-1\" => 1, \"1,0\" => 1))"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,41 +114,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fewer-pregnancy",
+   "id": "22530f3e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "informational-wright",
+   "execution_count": 14,
+   "id": "18b88922",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pm::Array<pm::Set<long, pm::operations::cmp>>\n",
-       "{-1}\n",
-       "{0 1 2 3}\n",
-       "{0 2 4}\n",
-       "{0 1}\n",
-       "{0 2}\n",
-       "{2 3}\n",
-       "{1 3}\n",
-       "{0 4}\n",
-       "{2 4}\n",
-       "{0}\n",
-       "{1}\n",
-       "{2}\n",
-       "{3}\n",
-       "{4}\n",
-       "{}\n"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "type StackyFan has no field HASSE_DIAGRAM",
+     "output_type": "error",
+     "traceback": [
+      "type StackyFan has no field HASSE_DIAGRAM",
+      "",
+      "Stacktrace:",
+      " [1] getproperty(x::StackyFan, f::Symbol)",
+      "   @ Base ./Base.jl:33",
+      " [2] top-level scope",
+      "   @ In[14]:1",
+      " [3] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
     }
    ],
    "source": [
@@ -159,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "informative-vacuum",
+   "id": "0d61629e",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recovered-council",
+   "id": "cfdfdf68",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -204,15 +197,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.0",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.0"
   }
  },
  "nbformat": 4,
