--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3eacb0c9",
+   "execution_count": 4,
+   "id": "interested-destruction",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "interiorPoints (generic function with 1 method)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "36cc6682",
+   "id": "joined-latin",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "53f36af4",
+   "id": "valuable-means",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "121a3787",
+   "id": "magnetic-running",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22530f3e",
+   "id": "physical-chemical",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "18b88922",
+   "id": "alleged-penguin",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0d61629e",
+   "id": "supposed-relaxation",
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "assumed-cambodia",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1 2 3}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
+       "1 1 0\n",
+       "1 0 1\n",
+       "1 1 1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 1 2 3}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t1 0 0\n",
+       "\t1 1 0\n",
+       "\t1 0 1\n",
+       "\t1 1 1\n"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0; 1 1 0; 1 0 1; 1 1 1],INPUT_CONES=[[0,1,2,3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "related-manhattan",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "true"
+      ],
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distinguishedAndMultiplicity([1,2,4],[1 0 0; 1 2 0;2 1 3; 1 0 3],[1,0,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cfdfdf68",
+   "id": "rubber-providence",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -197,15 +258,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.5.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.5.3"
   }
  },
  "nbformat": 4,
