--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "interested-destruction",
+   "id": "seasonal-concrete",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "interiorPoints (generic function with 1 method)"
+       "minimalByLex (generic function with 1 method)"
       ]
      },
      "execution_count": 4,
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "joined-latin",
+   "id": "lucky-ivory",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,8 @@
    ],
    "source": [
     "#inputs are a stacky fan and a vector of booleans representing the distinguished structure.\n",
-    "function BerghA(X::StackyFan,D::Array{Int64,1})\n",
+    "function BerghA(F::StackyFan,D::Array{Int64,1})\n",
+    "    X=deepcopy(F)\n",
     "    rayMatrix=Array(X.fan.RAYS)\n",
     "    coneList=convertIncidenceMatrix(X.fan.MAXIMAL_CONES)\n",
     "    dim=size(rayMatrix,2)\n",
@@ -62,7 +63,27 @@
     "        \n",
     "        #A2 - find extremal cones\n",
     "        Smax=extremalCones(S,rayMatrix,D)\n",
-    "        return Smax\n",
+    "        \n",
+    "        #A2 - find interior points in Smax\n",
+    "        intPoints=[]\n",
+    "        for cone in Smax\n",
+    "            C=coneConvert(cone,rayMatrix)\n",
+    "            coneIntPoints=interiorPoints(C)\n",
+    "            for point in coneIntPoints\n",
+    "               push!(intPoints,(point,cone)) \n",
+    "            end\n",
+    "        end\n",
+    "        \n",
+    "        #A2 - find stacky points (in terms of coefficients) derived from interior points\n",
+    "        P=[]\n",
+    "        for (point,cone) in intPoints\n",
+    "            stackyPoint=findStackyPoint(point,cone,rayMatrix,X.scalars)\n",
+    "            push!(P,stackyPoint)\n",
+    "        end\n",
+    "        \n",
+    "        #A2 - find smallest element of P with respect to lex ordering.\n",
+    "        psi=minimalByLex(P)\n",
+    "        \n",
     "        \n",
     "    end\n",
     "    return X\n",
@@ -71,35 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "valuable-means",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00007ffc7d4357d0), [1, 1, 1], Dict(\"1,2\" => 1, \"1,-1\" => 1, \"1,0\" => 1))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F=StackyFan([1 0; 1 2; 1 -1],[[0,1],[0,2]],[1,1,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "magnetic-running",
+   "id": "classified-hungarian",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00007ffc7d4357d0), [1, 1, 1], Dict(\"1,2\" => 1, \"1,-1\" => 1, \"1,0\" => 1))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001868eea0), [4, 1], Dict(\"0,1\" => 1,\"1,0\" => 4))"
       ]
      },
      "execution_count": 12,
@@ -108,149 +108,53 @@
     }
    ],
    "source": [
-    "BerghA(F,[0,0,1])"
+    "F=makeStackyFan([1 0;0 1],[[0,1]],[4,1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "physical-chemical",
+   "id": "gothic-pension",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "alleged-penguin",
+   "execution_count": null,
+   "id": "ready-fraud",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "type StackyFan has no field HASSE_DIAGRAM",
-     "output_type": "error",
-     "traceback": [
-      "type StackyFan has no field HASSE_DIAGRAM",
-      "",
-      "Stacktrace:",
-      " [1] getproperty(x::StackyFan, f::Symbol)",
-      "   @ Base ./Base.jl:33",
-      " [2] top-level scope",
-      "   @ In[14]:1",
-      " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
-    }
-   ],
-   "source": [
-    "lattice = X.HASSE_DIAGRAM\n",
-    "faces = @Polymake.convert_to Array{Set{Int}} lattice.FACES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "supposed-relaxation",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "[[$0$, $1$, $2$, $3$], [$0$, $2$, $4$], [$0$, $1$], [$0$, $2$], [$2$, $3$], [$1$, $3$], [$0$, $4$], [$2$, $4$], [$0$], [$1$], [$2$], [$3$], [$4$]]"
-      ],
-      "text/plain": [
-       "13-element Array{Any,1}:\n",
-       " [0, 1, 2, 3]\n",
-       " [0, 2, 4]\n",
-       " [0, 1]\n",
-       " [0, 2]\n",
-       " [2, 3]\n",
-       " [1, 3]\n",
-       " [0, 4]\n",
-       " [2, 4]\n",
-       " [0]\n",
-       " [1]\n",
-       " [2]\n",
-       " [3]\n",
-       " [4]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "getCones(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "assumed-cambodia",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1 2 3}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
-       "1 1 0\n",
-       "1 0 1\n",
-       "1 1 1</pre></details>"
-      ],
-      "text/plain": [
-       "type: NormalToricVariety\n",
-       "\n",
-       "INPUT_CONES\n",
-       "\t{0 1 2 3}\n",
-       "\n",
-       "INPUT_RAYS\n",
-       "\t1 0 0\n",
-       "\t1 1 0\n",
-       "\t1 0 1\n",
-       "\t1 1 1\n"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0; 1 1 0; 1 0 1; 1 1 1],INPUT_CONES=[[0,1,2,3]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "related-manhattan",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "true"
-      ],
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "distinguishedAndMultiplicity([1,2,4],[1 0 0; 1 2 0;2 1 3; 1 0 3],[1,0,0,0])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rubber-providence",
+   "id": "naval-siemens",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "announced-newspaper",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "brown-distance",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "functional-french",
    "metadata": {},
    "outputs": [],
    "source": []
