completed star_subdivision

--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,38 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "vulnerable-coach",
+   "execution_count": 4,
+   "id": "synthetic-peripheral",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " -----    -----    -----      -      -----   \n",
-      "|     |  |     |  |     |    | |    |     |  \n",
-      "|     |  |        |         |   |   |     |  \n",
-      "|     |   -----   |        |     |  |-----   \n",
-      "|     |        |  |        |-----|  |   |    \n",
-      "|     |  |     |  |     |  |     |  |    |   \n",
-      " -----    -----    -----   -     -  -     -  \n",
-      "\n",
-      "...combining (and extending) ANTIC, GAP, Polymake and Singular\n",
-      "Version\u001b[32m 0.5.1 \u001b[39m... \n",
-      " ... which comes with absolutely no warranty whatsoever\n",
-      "Type: '?Oscar' for more information\n",
-      "(c) 2019-2021 by The Oscar Development Team\n"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mArgumentError: Package Combinatorics not found in current path:\u001b[39m\n\u001b[91m- Run `import Pkg; Pkg.add(\"Combinatorics\")` to install the Combinatorics package.\u001b[39m\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mArgumentError: Package Combinatorics not found in current path:\u001b[39m\n\u001b[91m- Run `import Pkg; Pkg.add(\"Combinatorics\")` to install the Combinatorics package.\u001b[39m\n",
+      "",
+      "Stacktrace:",
+      " [1] require(::Module, ::Symbol) at ./loading.jl:893",
+      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "printn (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -49,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "prostate-david",
+   "id": "subjective-boxing",
    "metadata": {},
    "outputs": [
     {
@@ -257,10 +240,16 @@
     "    end\n",
     "    currentRays=slicematrix(Array(currentCone.RAYS)\n",
     "    fanRays=slicematrix(rayMatrix)\n",
-    "    incides=findall(x->x in currentRays,fanRays)\n",
+    "    indices=findall(x->x in currentRays,fanRays)\n",
     "    return indices\n",
     "end\n",
+    "    \n",
     "\n",
+    "    \n",
+    "function starSubdivision(X::Polymake.BigObjectAllocated, v::Array{Int64, 1})\n",
+    "    minimalCone = findMinimalCone(X, v)\n",
+    "    return toric_blowup(minimalCone, X, v)\n",
+    "end\n",
     "\"\"\"\n",
     "\n",
     "    toric_blowup(::Union{AbstractSet,AbstractVector},::Polymake.BigObjectAllocated,::AbstractVector)\n",
@@ -361,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "operating-township",
+   "id": "immune-words",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quarterly-tamil",
+   "id": "matched-values",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -396,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "american-oxygen",
+   "id": "internal-switzerland",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-symphony",
+   "id": "asian-movie",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -535,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adequate-divorce",
+   "id": "patient-rendering",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -543,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "macro-purpose",
+   "id": "wanted-engagement",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "signed-bronze",
+   "id": "spanish-jewelry",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -638,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "liable-youth",
+   "id": "narrative-yield",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "suspected-economics",
+   "id": "alpine-revolution",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polish-hollow",
+   "id": "ruled-nursery",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -711,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "orange-belief",
+   "id": "sweet-annotation",
    "metadata": {},
    "outputs": [],
    "source": []
