--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "synthetic-peripheral",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mArgumentError: Package Combinatorics not found in current path:\u001b[39m\n\u001b[91m- Run `import Pkg; Pkg.add(\"Combinatorics\")` to install the Combinatorics package.\u001b[39m\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mArgumentError: Package Combinatorics not found in current path:\u001b[39m\n\u001b[91m- Run `import Pkg; Pkg.add(\"Combinatorics\")` to install the Combinatorics package.\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] require(::Module, ::Symbol) at ./loading.jl:893",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "printn (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "subjective-boxing",
    "metadata": {},
    "outputs": [
@@ -41,7 +39,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +208,7 @@
     "    end\n",
     "    for face in faces\n",
     "        faceCone=coneConvert(face,rayMatrix)\n",
-    "        if faceCone.contains(v)==true\n",
+    "        if Polymake.polytope.contains(faceCone, v)\n",
     "            return faceCone\n",
     "        end\n",
     "    end\n",
@@ -223,7 +221,7 @@
     "    startCone=nothing\n",
     "    for cone in cones\n",
     "        polyCone=coneConvert(cone,rayMatrix)\n",
-    "        if polyCone.contains(v)==true\n",
+    "        if Polymake.polytope.contains(polyCone, v)\n",
     "            startCone=polyCone\n",
     "        end\n",
     "    end\n",
@@ -238,7 +236,7 @@
     "        end\n",
     "        currentCone=nextCone\n",
     "    end\n",
-    "    currentRays=slicematrix(Array(currentCone.RAYS)\n",
+    "    currentRays=slicematrix(Array(currentCone.RAYS))\n",
     "    fanRays=slicematrix(rayMatrix)\n",
     "    indices=findall(x->x in currentRays,fanRays)\n",
     "    return indices\n",
@@ -349,38 +347,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "immune-words",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl> <dt>type</dt><dd> Cone<Rational></dd> </dl><details><summary>INPUT_RAYS</summary><pre>1 0 0</pre></details>"
+       "<dl> <dt>type</dt><dd> Cone<Rational></dd> </dl><details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
+       "1 0 2</pre></details>"
       ],
       "text/plain": [
        "type: Cone<Rational>\n",
        "\n",
        "INPUT_RAYS\n",
-       "\t1 0 0\n"
+       "\t1 0 0\n",
+       "\t1 0 2\n"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "C=Polymake.polytope.Cone(INPUT_RAYS=[1 0 0])"
+    "C=Polymake.polytope.Cone(INPUT_RAYS=[1 0 0; 1 0 2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "matched-values",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "true"
+      ],
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Polymake.polytope.contains(C, Vector([2, 0, 2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6d00c450",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "false"
+      ],
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Polymake.polytope.contains(C, Vector([2, 0, 5]))"
+   ]
   },
   {
    "cell_type": "code",
@@ -708,15 +748,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
