Added coneRayDecomposition method to BerghA

--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "seasonal-concrete",
+   "execution_count": 120,
+   "id": "preceding-guidance",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "minimalByLex (generic function with 1 method)"
+       "coneRayDecomposition (generic function with 2 methods)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,8 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "lucky-ivory",
+   "execution_count": null,
+   "id": "interior-furniture",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "minus-deficit",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +41,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +50,7 @@
     "#inputs are a stacky fan and a vector of booleans representing the distinguished structure.\n",
     "function BerghA(F::StackyFan,D::Array{Int64,1})\n",
     "    X=deepcopy(F)\n",
-    "    rayMatrix=Array(X.fan.RAYS)\n",
+    "    rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
     "    coneList=convertIncidenceMatrix(X.fan.MAXIMAL_CONES)\n",
     "    dim=size(rayMatrix,2)\n",
     "    l=size(rayMatrix,1)\n",
@@ -77,13 +85,14 @@
     "        #A2 - find stacky points (in terms of coefficients) derived from interior points\n",
     "        P=[]\n",
     "        for (point,cone) in intPoints\n",
-    "            stackyPoint=findStackyPoint(point,cone,rayMatrix,X.scalars)\n",
+    "            stackyPoint=coneRayDecomposition(cone,rayMatrix,point,X.scalars)\n",
     "            push!(P,stackyPoint)\n",
     "        end\n",
+    "        return P\n",
     "        \n",
     "        #A2 - find smallest element of P with respect to lex ordering.\n",
     "        psi=minimalByLex(P)\n",
-    "        \n",
+    "        return psi\n",
     "        \n",
     "    end\n",
     "    return X\n",
@@ -92,29 +101,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "classified-hungarian",
+   "execution_count": 150,
+   "id": "painted-intelligence",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001868eea0), [4, 1], Dict(\"0,1\" => 1,\"1,0\" => 4))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000019de6da0), [2, 1], Dict(\"1,2\" => 1,\"1,0\" => 2))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F=makeStackyFan([1 0;0 1],[[0,1]],[4,1])"
+    "F=makeStackyFan([1 0;1 2],[[0,1]],[2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "valued-archives",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "[[$1$, $2$]]"
+      ],
+      "text/plain": [
+       "1-element Array{Any,1}:\n",
+       " [1, 2]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BerghA(F,[1,1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-pension",
+   "id": "fifty-treatment",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -122,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ready-fraud",
+   "id": "smoking-covering",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-siemens",
+   "id": "spectacular-biography",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -138,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "announced-newspaper",
+   "id": "changing-decline",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,15 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brown-distance",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "functional-french",
+   "id": "prescribed-better",
    "metadata": {},
    "outputs": [],
    "source": []
