minor bug fixes to starSubdivision

--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "preceding-guidance",
+   "execution_count": 6,
+   "id": "injured-engine",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "coneRayDecomposition (generic function with 2 methods)"
+       "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,15 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interior-furniture",
+   "id": "global-filing",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "minus-deficit",
+   "execution_count": 7,
+   "id": "three-sudan",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "painted-intelligence",
+   "execution_count": 8,
+   "id": "offshore-milton",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000019de6da0), [2, 1], Dict(\"1,2\" => 1,\"1,0\" => 2))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000002482970), [2, 1], Dict(\"1,2\" => 1,\"1,0\" => 2))"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "valued-archives",
+   "id": "latest-bristol",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-treatment",
+   "id": "standard-personal",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-covering",
+   "id": "premium-harmony",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spectacular-biography",
+   "id": "binary-estate",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "changing-decline",
+   "id": "military-opening",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prescribed-better",
+   "id": "checked-argument",
    "metadata": {},
    "outputs": [],
    "source": []
