--- a/BerghAHelpersDraft.ipynb
+++ b/BerghAHelpersDraft.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "domestic-spectacular",
+   "id": "established-economy",
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +31,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "understanding-structure",
+   "execution_count": 1,
+   "id": "published-reproduction",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Oscar [f1435218-dba5-11e9-1e4d-f1a5fab5fc13]\n",
+      "└ @ Base loading.jl:1278\n",
+      "[ Info: Regenerating 4ti2 wrappers in /home/dhruvbhatia00/.julia/packages/Singular/YZhEU/bin/v1.5\n",
+      "[ Info: Regenerating /home/dhruvbhatia00/.julia/packages/Singular/YZhEU/src/libraryfuncdictionary.jl\n",
+      "[ Info: Generating module common\n",
+      "[ Info: Generating module ideal\n",
+      "[ Info: Generating module graph\n",
+      "[ Info: Generating module fulton\n",
+      "[ Info: Generating module fan\n",
+      "[ Info: Generating module group\n",
+      "[ Info: Generating module polytope\n",
+      "[ Info: Generating module topaz\n",
+      "[ Info: Generating module tropical\n",
+      "[ Info: Generating module matroid\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "InitError: \u001b[91mIOError: could not spawn `jupyter kernelspec list --json`: no such file or directory (ENOENT)\u001b[39m\nduring initialization of module Polymake",
+     "output_type": "error",
+     "traceback": [
+      "InitError: \u001b[91mIOError: could not spawn `jupyter kernelspec list --json`: no such file or directory (ENOENT)\u001b[39m\nduring initialization of module Polymake",
+      "",
+      "Stacktrace:",
+      " [1] _spawn_primitive(::String, ::Cmd, ::Array{Any,1}) at ./process.jl:99",
+      " [2] #585 at ./process.jl:112 [inlined]",
+      " [3] setup_stdios(::Base.var\"#585#586\"{Cmd}, ::Array{Any,1}) at ./process.jl:196",
+      " [4] _spawn at ./process.jl:111 [inlined]",
+      " [5] open(::Cmd, ::Base.DevNull; write::Bool, read::Bool) at ./process.jl:370",
+      " [6] open at ./process.jl:361 [inlined]",
+      " [7] open(::Cmd, ::String, ::Base.DevNull) at ./process.jl:341",
+      " [8] read(::Cmd) at ./process.jl:410",
+      " [9] read(::Cmd, ::Type{String}) at ./process.jl:421",
+      " [10] prepare_jupyter_kernel_for_visualization() at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/ijulia.jl:26",
+      " [11] __init__() at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/Polymake.jl:141",
+      " [12] _include_from_serialized(::String, ::Array{Any,1}) at ./loading.jl:697",
+      " [13] _require_search_from_serialized(::Base.PkgId, ::String) at ./loading.jl:782",
+      " [14] _tryrequire_from_serialized(::Base.PkgId, ::UInt64, ::Nothing) at ./loading.jl:712",
+      " [15] _require_from_serialized(::String) at ./loading.jl:744",
+      " [16] _require(::Base.PkgId) at ./loading.jl:1040",
+      " [17] require(::Base.PkgId) at ./loading.jl:928",
+      " [18] require(::Module, ::Symbol) at ./loading.jl:923",
+      " [19] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
    "source": [
     "using Oscar\n",
     "using Nemo\n",
@@ -44,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "secure-borough",
+   "id": "working-trial",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "charming-making",
+   "id": "familiar-cookbook",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "noted-puppy",
+   "id": "sharing-mother",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "christian-vehicle",
+   "id": "ahead-wisdom",
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "systematic-expert",
+   "id": "north-backing",
    "metadata": {
     "scrolled": true
    },
@@ -195,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "acoustic-behalf",
+   "id": "political-think",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "equal-understanding",
+   "id": "deluxe-treasurer",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "challenging-geometry",
+   "id": "certified-printer",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -313,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "modified-order",
+   "id": "operational-treaty",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -343,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "mobile-disabled",
+   "id": "geographic-million",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -373,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "unable-questionnaire",
+   "id": "willing-exemption",
    "metadata": {
     "scrolled": true
    },
@@ -403,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patient-atmosphere",
+   "id": "fifty-projector",
    "metadata": {},
    "outputs": [],
    "source": []
