--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "expired-priority",
+   "id": "approximate-inspector",
    "metadata": {},
    "outputs": [
     {
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "following-writing",
+   "execution_count": 57,
+   "id": "young-rubber",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "function coneConvert(cone::Array{Int64,1},rayMatrix::Array{Int64,2})\n",
+    "function coneConvert(cone::Array{Int64,1},rayMatrix::Array)\n",
     "    coneRays=rowMinors(rayMatrix,cone)\n",
     "    C=Polymake.polytope.Cone(RAYS=coneRays)\n",
     "    return C\n",
@@ -200,7 +200,7 @@
     "    return out\n",
     "end\n",
     "\n",
-    "function findFaceContainingRay(C::Polymake.BigObjectAllocated,v::Array{Int64,1})\n",
+    "function findFaceContainingRay(C::Polymake.BigObjectAllocated,v::Array{Int64, 1})\n",
     "    rayMatrix=Array(C.RAYS)\n",
     "    faces=convertIncidenceMatrix(C.RAYS_IN_FACETS)\n",
     "    if faces==[[]]\n",
@@ -215,11 +215,13 @@
     "    return nothing\n",
     "end\n",
     "\n",
-    "function findMinimalCone(X::Polymake.BigObjectAllocated,v::Array{Int64,1})\n",
+    "function findMinimalCone(X::Polymake.BigObjectAllocated,v::Array{Int64, 1})\n",
     "    rayMatrix=Array(X.RAYS)\n",
     "    cones=convertIncidenceMatrix(X.MAXIMAL_CONES)\n",
+    "    #print(cones)\n",
     "    startCone=nothing\n",
     "    for cone in cones\n",
+    "        #print(cone)\n",
     "        polyCone=coneConvert(cone,rayMatrix)\n",
     "        if Polymake.polytope.contains(polyCone, v)\n",
     "            startCone=polyCone\n",
@@ -246,7 +248,9 @@
     "    \n",
     "function starSubdivision(X::Polymake.BigObjectAllocated, v::Array{Int64, 1})\n",
     "    minimalCone = findMinimalCone(X, v)\n",
-    "    return toric_blowup(minimalCone, X, v)\n",
+    "    s = [i - 1 for i in minimalCone]\n",
+    "    v = transpose(v)\n",
+    "    return toric_blowup(s, X, v)\n",
     "end\n",
     "\"\"\"\n",
     "\n",
@@ -347,8 +351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "needed-lighter",
+   "execution_count": 6,
+   "id": "dense-plate",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +369,7 @@
        "\t1 0 2\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,8 +380,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "automated-intermediate",
+   "execution_count": 8,
+   "id": "romantic-theme",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +393,7 @@
        "true"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "devoted-worse",
+   "execution_count": 9,
+   "id": "bacterial-merchant",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +417,7 @@
        "false"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,8 +428,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "missing-boxing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1 2 3}\n",
+       "{0 2 4 5}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
+       "1 1 0\n",
+       "1 0 1\n",
+       "1 1 1\n",
+       "1 -1 0\n",
+       "1 -1 1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 1 2 3}\n",
+       "\t{0 2 4 5}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t1 0 0\n",
+       "\t1 1 0\n",
+       "\t1 0 1\n",
+       "\t1 1 1\n",
+       "\t1 -1 0\n",
+       "\t1 -1 1\n"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tv = Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0; 1 1 0; 1 0 1; 1 1 1; 1 -1 0; 1 -1 1]; INPUT_CONES=[[0,1, 2, 3],[0, 4,2, 5]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "prescribed-wallace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "[$1$, $2$]"
+      ],
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 2"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findMinimalCone(tv, [2, 1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "acquired-steel",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 2 3}\n",
+       "{0 1 3}\n",
+       "{0 2 5}\n",
+       "{0 4 5}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
+       "1 1 0\n",
+       "1 0 1\n",
+       "1 1 1\n",
+       "1 -1 0\n",
+       "1 -1 1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 2 3}\n",
+       "\t{0 1 3}\n",
+       "\t{0 2 5}\n",
+       "\t{0 4 5}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t1 0 0\n",
+       "\t1 1 0\n",
+       "\t1 0 1\n",
+       "\t1 1 1\n",
+       "\t1 -1 0\n",
+       "\t1 -1 1\n"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starSubdivision(tv, [1,0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "fundamental-survival",
+   "id": "cultural-woman",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supported-breeding",
+   "id": "horizontal-assault",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -564,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "separate-freight",
+   "id": "golden-interstate",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -572,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "technological-colonial",
+   "id": "purple-hypothesis",
    "metadata": {},
    "outputs": [
     {
@@ -659,15 +779,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interim-rapid",
+   "id": "czech-necessity",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "clear-wednesday",
+   "execution_count": 12,
+   "id": "alien-joyce",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +816,7 @@
        "\t1 -2 0\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "overall-stick",
+   "id": "saving-yahoo",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-dictionary",
+   "id": "regulation-therapist",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -740,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "animal-worship",
+   "id": "competent-wales",
    "metadata": {},
    "outputs": [],
    "source": []
